modules/cli/src/test/resources/bad/disamb/modules/Modules04a.scr
module bad.disamb.modules.Modules04a;

import bad.disamb.modules.Modules04a;

